--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,18 @@
   "name": "myjsfiddle",
   "version": "0.0.0",
   "dependencies": {
+    "jquery": "~1.11.1",
     "angular": "~1.2.26",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap-sass-official": "~3.2.0",
+    "bootstrap": "~3.2.0",
     "angular-resource": "~1.2.26",
     "angular-cookies": "~1.2.26",
     "angular-sanitize": "~1.2.26",
     "angular-animate": "~1.2.26",
     "angular-touch": "~1.2.26",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "angular-ui-codemirror": "angular-ui/ui-codemirror#~0.1.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.26",
